SQL-121 greatly reduce image size